--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2024"
 
 [dependencies]
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
+chrono = "0.4"
+chrono-tz = "0.8"
+rand = "0.8"
 
 [dependencies.serenity]
 version = "0.12.4"
