--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
 chrono = "0.4"
 chrono-tz = "0.8"
 rand = "0.8"
+async-trait = "0.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [dependencies.serenity]
 version = "0.12.4"
