--- a/config.example.json
+++ b/config.example.json
@@ -21,7 +21,7 @@
     "daily_morning_task": {
       "enabled": true,
       "channel_id": 123456789012345678,
-      "message": "おはようございます！今日も一日頑張りましょう！"
+      "gemini_api_key": "YOUR_GEMINI_API_KEY_HERE"
     }
   }
 }
