--- a/config.example.json
+++ b/config.example.json
@@ -2,8 +2,7 @@
   "discord_token": "YOUR_DISCORD_BOT_TOKEN",
   "guild_id": 123456789012345678,
   "scheduled_tasks": {
-    "scheduled_channel_id": 123456789012345678,
-    "enable_delete_message_task": false,
+    "enable_delete_message_task": true,
     "delete_message_channels": {
       "762575939623452682": 43200,
       "762576579507126273": 43200,
