--- a/config.example.json
+++ b/config.example.json
@@ -1,6 +1,7 @@
 {
   "discord_token": "YOUR_DISCORD_BOT_TOKEN",
   "guild_id": 123456789012345678,
+  "debug_slash_commands": false,
   "scheduled_tasks": {
     "enable_delete_message_task": true,
     "delete_message_channels": {
