--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ async-trait = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 reqwest = { version = "0.12.23", features = ["json"] }
+yahoo_finance_api = "4.1.0"
 
 [dependencies.serenity]
 version = "0.12.4"
