--- a/config.example.json
+++ b/config.example.json
@@ -23,5 +23,10 @@
       "channel_id": 123456789012345678,
       "gemini_api_key": "YOUR_GEMINI_API_KEY_HERE"
     }
+  },
+  "dic": {
+    "spreadsheet_id": "YOUR_SPREADSHEET_ID",
+    "service_account_key_path": "/path/to/service-account-key.json",
+    "db_spreadsheet_url": "https://docs.google.com/spreadsheets/d/YOUR_SPREADSHEET_ID/edit#gid=1264027664&range=A1"
   }
 }
